--- a/cad/tnt-mmtl/Makefile
+++ b/cad/tnt-mmtl/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.5 2005/05/22 20:07:41 jlam Exp $
+# $NetBSD: Makefile,v 1.6 2005/11/08 17:50:41 tonio Exp $
 #
 
 DISTNAME=	tnt-1.2.2
@@ -18,8 +18,8 @@ PKG_INSTALLATION_TYPES= overwrite pkgviews
 GNU_CONFIGURE=	YES
 USE_TOOLS+=	gmake
 USE_LANGUAGES=	c c++ fortran
-LATEX_DEPMOD=	build
-LATEX_ACCEPTED=	teTeX1 teTeX2 teTeX3
+TEX_DEPMOD=	build
+TEX_ACCEPTED=	teTeX1 teTeX2 teTeX3
 
 post-patch:
 	${MV} ${WRKSRC}/tnt ${WRKSRC}/tnt-mmtl
