--- a/print/magicfilter/Makefile
+++ b/print/magicfilter/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.42 2005/07/18 02:37:22 jlam Exp $
+# $NetBSD: Makefile,v 1.43 2005/11/08 20:46:18 tonio Exp $
 
 DISTNAME=	magicfilter-1.2
 PKGREVISION=	4
@@ -18,7 +18,7 @@ USE_TOOLS+=	gmake gzip
 GNU_CONFIGURE=	yes
 CONFIGURE_ENV+=	GHOSTSCRIPT=${LOCALBASE}/bin/gs
 CONFIGURE_ENV+= GZIP=${TOOLS_GZIP_CMD:Q}
-LATEX_ACCEPTED=	teTeX1 teTeX2 teTeX3
+TEX_ACCEPTED=	teTeX1 teTeX2 teTeX3
 
 PLIST_SRC=	${WRKDIR}/PLIST
 
