--- a/games/fortunes-h2g2/Makefile
+++ b/games/fortunes-h2g2/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.7 2004/01/20 12:15:40 agc Exp $
+# $NetBSD: Makefile,v 1.1.1.1 2005/10/09 23:15:54 jschauma Exp $
 #
 
 DISTNAME=	fortunes-h2g2-0.1
@@ -8,7 +8,7 @@ EXTRACT_SUFX=	.gz
 
 MAINTAINER=	jschauma@NetBSD.org
 HOMEPAGE=	http://www.netmeister.org/misc.html
-COMMENT=	Fortunes from the famous Calvin & Hobbes comic strips
+COMMENT=	Fortunes from Douglas Adams' "Hitchiker's Guide to the Galaxy"
 
 BUILD_DEPENDS+=	fortune-strfile-*:../../games/fortune-strfile
 
