--- a/net/gofish/Makefile
+++ b/net/gofish/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.1.1.1 2005/10/26 03:42:21 minskim Exp $
+# $NetBSD: Makefile,v 1.2 2005/11/02 19:13:00 wiz Exp $
 
 DISTNAME=		gofish-1.1
+PKGREVISION=		1
 CATEGORIES=		net
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=gofish/}
 
