--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.300 2005/11/02 09:20:51 taca Exp $
+# $NetBSD: Makefile,v 1.301 2005/11/03 06:35:30 taca Exp $
 #
 
 COMMENT=	Text processing utilities (does not include desktop publishing)
@@ -120,6 +120,7 @@ SUBDIR+=	libcroco
 SUBDIR+=	libpathan
 SUBDIR+=	libunicode
 SUBDIR+=	libxml
+SUBDIR+=	libxml++2
 SUBDIR+=	libxml2
 SUBDIR+=	libxslt
 SUBDIR+=	lout
