--- a/www/Makefile
+++ b/www/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.418 2005/11/03 06:35:30 taca Exp $
+# $NetBSD: Makefile,v 1.419 2005/11/05 02:00:28 minskim Exp $
 #
 
 COMMENT=	Packages related to the World Wide Web
@@ -152,7 +152,6 @@ SUBDIR+=	mozilla-bin
 SUBDIR+=	mozilla-bin-nightly
 SUBDIR+=	mozilla-gtk2
 SUBDIR+=	navigator
-SUBDIR+=	navigator3
 SUBDIR+=	neon
 SUBDIR+=	netscape
 SUBDIR+=	netscape7
