--- a/mail/Makefile
+++ b/mail/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.274 2005/10/31 20:36:05 minskim Exp $
+# $NetBSD: Makefile,v 1.275 2005/11/12 04:15:12 minskim Exp $
 #
 
 COMMENT=	Electronic mail utilities
@@ -106,6 +106,7 @@ SUBDIR+=	milter-greylist
 SUBDIR+=	milter-regex
 SUBDIR+=	mimedefang
 SUBDIR+=	mini_sendmail
+SUBDIR+=	mpop
 SUBDIR+=	msmtp
 SUBDIR+=	mush
 SUBDIR+=	mutt
