--- a/pkgtools/pkg_install/files/lib/Makefile.in
+++ b/pkgtools/pkg_install/files/lib/Makefile.in
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.in,v 1.8 2004/08/21 06:33:40 jlam Exp $
+# $NetBSD: Makefile.in,v 1.9 2005/11/05 13:30:31 wiz Exp $
 
 srcdir=		@srcdir@
 
@@ -16,7 +16,7 @@ CFLAGS=		@CFLAGS@
 
 LIB=	libinstall.a
 
-OBJS=	automatic.o dewey.o exec.o fexec.o file.o ftpio.o global.o lpkg.o path.o pen.o \
+OBJS=	automatic.o dewey.o fexec.o file.o ftpio.o global.o lpkg.o path.o pen.o \
 	pkgdb.o plist.o str.o var.o version.o
 
 all: $(LIB)
