--- a/comms/birda/Makefile
+++ b/comms/birda/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.13 2003/09/30 21:53:00 seb Exp $
+# $NetBSD: Makefile,v 1.14 2005/11/14 08:05:06 augustss Exp $
 #
 
-DISTNAME=       birda-1.2
+DISTNAME=       birda-1.3
 CATEGORIES=	comms
 MASTER_SITES=   ftp://ftp.augustsson.net/pub/netbsd/
 
