--- a/net/bittornado/Makefile.common
+++ b/net/bittornado/Makefile.common
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile.common,v 1.7 2005/06/27 18:02:37 wiz Exp $
+# $NetBSD: Makefile.common,v 1.8 2005/09/27 19:24:14 wiz Exp $
 #
 
-DISTNAME=		BitTornado-0.3.13
+DISTNAME=		BitTornado-0.3.14
 CATEGORIES=		net
 MASTER_SITES=		http://www.bittornado.com/download/
 
-MAINTAINER=		wiz@NetBSD.org
+MAINTAINER=		veego@NetBSD.org
 HOMEPAGE=		http://bittornado.com/
 COMMENT=		Experimental bittorrent client
 
