--- a/textproc/antiword/Makefile
+++ b/textproc/antiword/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.15 2005/01/01 03:57:21 wiz Exp $
+# $NetBSD: Makefile,v 1.16 2005/09/08 10:37:15 markd Exp $
 #
 
-DISTNAME=	antiword-0.36.1
+DISTNAME=	antiword-0.37
 CATEGORIES=	textproc converters print
 MASTER_SITES=	http://www.winfield.demon.nl/linux/
 
