--- a/sysutils/tpb/Makefile
+++ b/sysutils/tpb/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.6 2005/04/11 21:47:29 tv Exp $
+# $NetBSD: Makefile,v 1.7 2005/06/01 18:03:22 jlam Exp $
 #
 
 DISTNAME=	tpb-0.6.1
@@ -13,6 +13,7 @@ COMMENT=	Utility to enable the IBM ThinkPad(tm) special keys
 ONLY_FOR_PLATFORM= *-*-i386
 
 USE_PKGINSTALL=	YES
+USE_PKGLOCALEDIR=	yes
 GNU_CONFIGURE=	YES
 
 CONFIGURE_ARGS+=	--sysconfdir=${PKG_SYSCONFDIR}
