--- a/games/freeciv-share/Makefile
+++ b/games/freeciv-share/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.9 2004/03/05 12:06:38 adam Exp $
+# $NetBSD: Makefile,v 1.10 2005/08/24 10:36:02 adam Exp $
 
 PKGNAME=	${DISTNAME:S/-/-share-/}
 COMMENT=	Machine independent files for Freeciv
 
-.include "../freeciv-share/Makefile.common"
+.include "../../games/freeciv-share/Makefile.common"
 
 CONFIGURE_ARGS+=	--disable-server
 CONFIGURE_ARGS+=	--enable-client=no
