--- a/lang/chicken/Makefile
+++ b/lang/chicken/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.17 2005/04/11 21:46:12 tv Exp $
+# $NetBSD: Makefile,v 1.18 2005/05/22 20:08:09 jlam Exp $
 #
 
-DISTNAME=	chicken-1.89
+DISTNAME=	chicken-2.2
 CATEGORIES=	lang
 MASTER_SITES=	http://www.call-with-current-continuation.org/
 
@@ -12,14 +12,11 @@ COMMENT=	Scheme to C compiler, handling R5RS
 GNU_CONFIGURE=	yes
 USE_TOOLS+=	gmake
 USE_LIBTOOL=	yes
-TEST_TARGET=	test
 
 INFO_FILES=	chicken.info
+MAKE_ENV+=	MAKEINFO=${TRUE:Q}
 
 # Avoid an ICE in gcc2 on sparc64
 CONFIGURE_ENV+=	F77=${FALSE}
-
-# This is for the test target
-UNLIMIT_RESOURCES=	datasize
 
 .include "../../mk/bsd.pkg.mk"
