--- a/mk/defaults/mk.conf
+++ b/mk/defaults/mk.conf
@@ -1,4 +1,4 @@
-# $NetBSD: mk.conf,v 1.91 2005/11/15 12:54:36 tonio Exp $
+# $NetBSD: mk.conf,v 1.92 2005/11/16 20:59:23 erh Exp $
 #
 
 # This file provides default values for variables that may be overridden
@@ -21,7 +21,7 @@
 #           or the word "yes" to allow all. (not recommended)
 # Default: not defined
 
-SKIP_AUDIT_PACKAGES=no
+SKIP_AUDIT_PACKAGES?=no
 # Completely skip running audit-packages to check for vulnerable packages.
 # Specifying individual vulnerabilities with
 # ALLOW_VULNERABILITIES.<pkgname>=<vulnid> is preferred to using this.
