--- a/sysutils/xosview/Makefile
+++ b/sysutils/xosview/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.52 2005/04/11 21:47:31 tv Exp $
+# $NetBSD: Makefile,v 1.53 2005/05/22 20:08:34 jlam Exp $
 
 DISTNAME=	xosview-1.8.2
+PKGREVISION=	1
 CATEGORIES=	sysutils
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=xosview/}
 
