--- a/mk/platform/NetBSD.pkg.dist
+++ b/mk/platform/NetBSD.pkg.dist
@@ -1,5 +1,5 @@
 #     Id: BSD.local.dist,v 1.30 1997/08/01 13:16:39 phk Exp
-#	$NetBSD: NetBSD.pkg.dist,v 1.24 2006/09/12 13:20:20 jmmv Exp $
+#	$NetBSD: NetBSD.pkg.dist,v 1.25 2006/09/12 17:04:58 jmmv Exp $
 #
 
 /set type=dir uname=root gname=wheel mode=0755
@@ -1055,6 +1055,10 @@
                 ..
             ..
             se
+                LC_MESSAGES
+                ..
+            ..
+            si
                 LC_MESSAGES
                 ..
             ..
