--- a/mk/platform/UnixWare.pkg.dist
+++ b/mk/platform/UnixWare.pkg.dist
@@ -1,6 +1,6 @@
 #     Id: BSD.local.dist,v 1.30 1997/08/01 13:16:39 phk Exp
 #	NetBSD: SunOS.pkg.dist,v 1.64 2004/04/01 12:19:09 jmmv Exp
-#	$NetBSD: UnixWare.pkg.dist,v 1.24 2006/09/12 13:20:20 jmmv Exp $
+#	$NetBSD: UnixWare.pkg.dist,v 1.25 2006/09/12 17:04:58 jmmv Exp $
 #
 
 /set type=dir uname=root gname=sys mode=0755
@@ -568,6 +568,10 @@
                 ..
             ..
             se
+                LC_MESSAGES
+                ..
+            ..
+            si
                 LC_MESSAGES
                 ..
             ..
