--- a/www/lighttpd/Makefile
+++ b/www/lighttpd/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.10 2006/04/10 12:07:18 joerg Exp $
+# $NetBSD: Makefile,v 1.11 2006/07/07 15:49:34 jlam Exp $
 
 DISTNAME=	lighttpd-1.4.11
+PKGREVISION=	1
 CATEGORIES=	www
 MASTER_SITES=	http://www.lighttpd.net/download/
 
