--- a/ham/hamlib/Makefile
+++ b/ham/hamlib/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.18 2006/03/11 01:53:39 rillig Exp $
+# $NetBSD: Makefile,v 1.19 2006/05/12 07:07:00 joerg Exp $
 #
 
-DISTNAME=	hamlib-1.2.5
+DISTNAME=	hamlib-1.2.6
 CATEGORIES=	ham
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=hamlib/}
 #EXTRACT_SUFX=	.tar.bz2
