--- a/ham/tlf/Makefile
+++ b/ham/tlf/Makefile
@@ -1,8 +1,9 @@
-# $NetBSD: Makefile,v 1.11 2006/03/09 21:04:44 jlam Exp $
+# $NetBSD: Makefile,v 1.12 2006/04/13 18:23:34 jlam Exp $
 #
 
-DISTNAME=	tlf-0.9.27
-PKGREVISION=	1
+#DISTNAME=	tlf-0.9.27
+DISTNAME=	tlf-0.9.30
+#PKGREVISION=	1
 CATEGORIES=	ham
 MASTER_SITES=	http://sharon.pi8zaa.ampr.org/pub/linux/ham/tlf/
 
